<resources>
    <string name="app_name">Posesionista</string>
    <!-- Strings used for fragments for navigation -->
    <string name="precio">Precio</string>
    <string name="name">Name</string>
    <string name="numdeserie">Serial number: </string>
    <string name="nombre">Nombre</string>
    <string name="detailsThingy">Details</string>
    <string name="its_a_caterpillar">Its a caterpillar</string>
    <string name="add_photo">add photo</string>
    <string name="today_s_date">Today\'s date</string>
    <string name="price">$0</string>
    <string name="thingy_name">Thingy</string>
    <string name="series_number">Series number</string>
    <string name="photo_of_thingy">Photo of thingy</string>
    <string name="editButton">Edit Date</string>
    <string name="money">$ </string>
    <string name="delete_photo">Delete photo</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="section_header">Header</string>
</resources>