<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Thingy"
    tools:layout_editor_absoluteY="81dp">

    <TextView
        android:id="@+id/label_precio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/precio"
        app:layout_constraintEnd_toStartOf="@+id/campoPrecio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_nombre" />

    <EditText
        android:id="@+id/campoNombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label_nombre"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/labelSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/numdeserie"
        app:layout_constraintEnd_toStartOf="@+id/campoSerie"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_precio" />

    <EditText
        android:id="@+id/campoPrecio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="number"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/label_precio"
        app:layout_constraintEnd_toEndOf="@+id/campoNombre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/label_precio"
        app:layout_constraintStart_toStartOf="@+id/campoNombre"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/campoSerie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBaseline_toBaselineOf="@+id/labelSerie"
        app:layout_constraintEnd_toEndOf="@+id/campoPrecio"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/labelSerie"
        app:layout_constraintStart_toStartOf="@+id/campoPrecio"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/label_nombre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/nombre"
        app:layout_constraintEnd_toStartOf="@+id/campoNombre"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/cameraView"
        android:layout_width="307dp"
        android:layout_height="201dp"
        android:layout_marginTop="96dp"
        android:contentDescription="@string/its_a_caterpillar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoFecha"
        tools:src="@drawable/martin_adams_mrk2vbjezly_unsplash" />

    <ImageButton
        android:id="@+id/cameraButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/add_photo"
        android:src="@android:drawable/ic_menu_camera"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toTopOf="@+id/cameraView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoFecha"
        app:layout_constraintVertical_bias="0.413" />

    <EditText
        android:id="@+id/campoFecha"
        android:layout_width="116dp"
        android:layout_height="47dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/today_s_date"
        android:inputType="date"
        android:labelFor="@string/today_s_date"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/campoSerie" />

    <Button
        android:id="@+id/editButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/editButton"
        android:textColor="@color/white"
        android:background="@color/colorPrimary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toEndOf="@+id/campoFecha"
        app:layout_constraintTop_toTopOf="@+id/campoFecha" />

</androidx.constraintlayout.widget.ConstraintLayout>